# tg_scraper_test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
telegram_scraper/: collector.py  main.py  repositories.py
telegram_scraper/config/: settings.py
telegram_scraper/db/: database.py  init.sql  init_db.py  models.py
telegram_scraper/scheduler/: jobs.py  scheduler.py
telegram_scraper/telegram_client/: client.py
